--- a/benign_malignant(with_HOG_feature).ipynb
+++ b/benign_malignant(with_HOG_feature).ipynb
@@ -18,6 +18,7 @@
       },
       "outputs": [],
       "source": [
+        "#importing libraries\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -32,23 +33,19 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 73
+          "height": 38
         },
         "id": "mHKRI3siAyvm",
-        "outputId": "bc08cfd5-ec89-4be1-8801-cbdf500645f8"
+        "outputId": "828a8073-8c34-44bb-88be-0c142d454322"
       },
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-fa5d5bbc-5dac-402c-bb11-b3b98712cc35\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-8cb342fd-231a-4aa6-9086-73c980f986b1\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-fa5d5bbc-5dac-402c-bb11-b3b98712cc35\">\n",
+              "     <output id=\"result-8cb342fd-231a-4aa6-9086-73c980f986b1\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -228,16 +225,13 @@
               "};\n",
               "})(self);\n",
               "</script> "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Saving archive (update1).zip to archive (update1).zip\n"
-          ]
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -2475,7 +2469,7 @@
         "id": "-YivcztLlSs6"
       },
       "source": [
-        "Implementing a Decision Tree"
+        "##Implementing a Decision Tree"
       ]
     },
     {
@@ -2629,7 +2623,7 @@
         "id": "6xUnMS58m9QE"
       },
       "source": [
-        "Implementing a Naive Bayes classifier"
+        "##Implementing a Naive Bayes classifier"
       ]
     },
     {
@@ -5013,7 +5007,7 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
-      "authorship_tag": "ABX9TyOmeFc3kB4tU5JtQIFbCc38",
+      "authorship_tag": "ABX9TyM+Vs4MeUsKnISk77NFPRrs",
       "include_colab_link": true
     },
     "kernelspec": {
