--- a/benign_malignant(with_ORB_feature).ipynb
+++ b/benign_malignant(with_ORB_feature).ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "HqGnJEQnX2ZY"
       },
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -248,7 +248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -329,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "UaOtd3kDkbPh"
       },
@@ -368,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "o0J36S8nkbVa"
       },
@@ -381,7 +381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "2KzJYcKdloLn"
       },
@@ -403,7 +403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "BigayFrEsDA9"
       },
@@ -416,7 +416,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "NjqrhMIpt3V1"
       },
@@ -429,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1263,7 +1263,7 @@
         }
       ],
       "source": [
-        "confusion_matrix(y_pred_lr,y_test)"
+        "confusion_matrix(y_pred_blr,y_test)"
       ]
     },
     {
@@ -3272,7 +3272,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMMppsxX/qzT4uIcUl3QNXE",
+      "authorship_tag": "ABX9TyPk+XcEm/KIZ2LCncpDuEPz",
       "include_colab_link": true
     },
     "kernelspec": {
